[package]
name = "DonutSpace"
version = "0.1.2"
edition = "2024"
authors = ["iamdonut215", "alex92567"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["std", "2d", "png"] }
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
